fixed z-index issue with front page

--- a/css/ruokstylesheet.scss
+++ b/css/ruokstylesheet.scss
@@ -16,8 +16,9 @@ body {
          font-size: 8rem;
        }
        display:grid;
-       grid-template-columns: 100vw;
-       grid-template-rows: 40vh 10vh 40vh 10vh;
+       grid-template-columns: auto;
+      //  grid-template-columns: 100vw;
+      //  grid-template-rows: 40vh 10vh 40vh 10vh;
        overflow: hidden;
    
     }
